--- a/index.html
+++ b/index.html
@@ -4,11 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Developer</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="styles/portfolio.css">
+
+
 </head>
 <body>
-    <header>
+    <header>    
 
+            <nav>
 
+                <h3 class="nav-title">AH<span class="text-primary">A</span>D</h3>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Blog</a></li>
+                <li><button>Hair Me</button></li>
+            </nav>
     </header> 
 
     <main>
