--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 
 </head>
 <body>
-    <header>    
+    <header class="header">    
 
             <nav>
 
                 <h3 class="nav-title">AH<span class="text-primary">A</span>D</h3>
                 <li><a href="">Portfolio</a></li>
                 <li><a href="">Blog</a></li>
-                <li><button>Hair Me</button></li>
+                <li><button class="btn-peimart">Hair Me</button></li>
             </nav>
     </header> 
 
