footer section contact adds

--- a/index.html
+++ b/index.html
@@ -186,8 +186,14 @@
             </div>
         </div>
         <div class="footer-colum"></div>
-        <h3 class="section-title">Let’s Message me</h3>
-        <p class="section-description"></p>
+        <h3 class="section-title">Let's Message me</h3>
+        <Form class="contact" action=""><input type="text" placeholder="Your Name"> 
+            <input type="Email" name="" placeholder="Youe Email"id="">
+            <textarea name="" placeholder="Message" id="" cols="30" rows="10"></textarea>
+            <input class="btn-primary" type="submit" value="submit">
+
+
+        </Form>
 
     </footer>
 
