--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             </div>
         </div>
         <div class="footer-colum"></div>
-        <h3 class="section-title">Let's Message me</h3>
+        <h3 class="section-title">Let's Message me right naw.</h3>
         <Form class="contact" action=""><input type="text" placeholder="Your Name"> 
             <input type="Email" name="" placeholder="Youe Email"id="">
             <textarea name="" placeholder="Message" id="" cols="30" rows="10"></textarea>
